Closed Bug 569587 Opened 15 years ago Closed 15 years ago

nsBidiKeyboard.cpp compilation failure on mingw-w64 due to pointer to int casts loosing precision.

Categories

(Core :: Widget: Win32, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jacek, Assigned: jacek)

References

Details

Attachments

(1 file)

Attached patch fix v1.0Splinter Review
I get following errors: /home/jacek/mozilla-build/mozilla-central64/widget/src/windows/nsBidiKeyboard.cpp: In member function 'nsresult nsBidiKeyboard::SetupBidiKeyboards()': /home/jacek/mozilla-build/mozilla-central64/widget/src/windows/nsBidiKeyboard.cpp:161:18: error: cast from 'HKL__*' to 'DWORD' loses precision /home/jacek/mozilla-build/mozilla-central64/widget/src/windows/nsBidiKeyboard.cpp:166:18: error: cast from 'HKL__*' to 'DWORD' loses precision /home/jacek/mozilla-build/mozilla-central64/widget/src/windows/nsBidiKeyboard.cpp: In member function 'PRBool nsBidiKeyboard::IsRTLLanguage(HKL__*)': /home/jacek/mozilla-build/mozilla-central64/widget/src/windows/nsBidiKeyboard.cpp:216:28: error: cast from 'HKL__*' to 'DWORD' loses precision The obvious fix are proper casts.
Attachment #448753 - Attachment is patch: true
Attachment #448753 - Flags: review?(roc)
Assignee: nobody → jacek
Thanks for review.
Keywords: checkin-needed
Blocks: 570342
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: