Bug 569587  - nsBidiKeyboard.cpp compilation failure on mingw-w64 due to pointer to int casts loosing precision r=roc